# Licencjat

./: .gitignore  .tool-versions  Cargo.toml  README.md  Scarb.toml  package-lock.json  package.json  snfoundry.toml
client/: .prettierignore  package.json  tsconfig.json
client/src/: app.css
client/src/components/: ActionButton.svelte  InputField.svelte  JsonAction.svelte  Navbar.svelte  PageContentContainer.svelte  Toast.svelte  ToggleTheme.svelte
client/src/lib/stores/: provider.ts  toast.ts  wallet.ts
client/src/lib/types/: api.ts
client/src/lib/utils/: conversions.ts  sanitize.ts  toLowHigh.ts  toWei.ts  token.ts  wallet.ts  wrapWithToast.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/auto-payment/: +page.svelte
client/src/routes/positions/: +page.svelte
contracts/: Scarb.toml
contracts/src/: data_models.cairo  lib.cairo  smart_payment.cairo
contracts/tests/: test_contract.cairo
indexer/: Dockerfile  package.json  tsconfig.json
indexer/src/: client.ts  config.ts  index.ts  types.ts  ws_server.ts
transaction_executor/: Cargo.toml
transaction_executor/src/: check_execution.rs  execute_payments.rs  fetcher.rs  main.rs
