[package]
name = "transaction_executor"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
futures-util.workspace = true
